Add variants into the analysis
Signed-off-by: Daniel Danis <daniel.gordon.danis@protonmail.com>